syntax = "proto3";

package search;

// Search service returns best pub chocies near stadium.
service Search {
  rpc Nearby(NearbyRequest) returns (SearchResult);
}

message NearbyRequest {
  float lat = 1;
  float lon = 2;
  string inDate = 3;
  string outDate = 4;
}

message SearchResult {
  repeated string pubIds = 1;
}
